# sat

./: .amlignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  Notice.txt  PERFORMANCE_OPTIMIZATIONS.md  README.md  fix_lifelines_import.py  moco_batch_size_summary.csv  pyproject.toml  setup.py  studies.sh
.github/ISSUE_TEMPLATE/: bug_report.md  experiment.md  feature_request.md
.github/workflows/: codeql-analysis.yml
conf/: ci.yaml  cv.yaml  defaults.yaml  eda.yaml  eval.yaml  finetune.yaml  infer.yaml  lr_finder.yaml  moco.yaml  optuna_optimize.yaml  pipeline.yaml  prepare_data.yaml  preprocess_data.yaml  pretrain.yaml  train_labeltransform.yaml  train_tokenizer.yaml
conf/aml/: cpu.yaml  gpu.yaml
conf/callbacks/: azureml.yaml  default.yaml  earlystopping_lossweight.yaml  loss_weight_logger.yaml  mlflow.yaml
conf/data/load/: hsa_synthetic.yaml  metabric-dummy.yaml  metabric.yaml  metabric_numeric.yaml  seer.yaml  synthetic.yaml  synthetic_meds.yaml  synthetic_omop.yaml
conf/data/parse/: hsa_synthetic.yaml  metabric-dummy.yaml  metabric.yaml  metabric_numeric.yaml  seer.yaml  synthetic.yaml  synthetic_meds.yaml  synthetic_numerics.yaml  synthetic_omop.yaml  synthetic_omop_cohort.yaml  synthetic_omop_generate.yaml  synthetic_omop_parse.yaml
conf/data/transform/: default.yaml  survtrace_seer.yaml
conf/debug/: default.yaml
conf/experiments/: defaults.yaml
conf/experiments/hsa_synthetic/: deephit.yaml  deephit_combined_ranknet.yaml  deephit_combined_soap.yaml  deephit_event_ranking.yaml  deephit_focal.yaml  deephit_hybrid.yaml  deephit_listmle.yaml  deephit_ranknet.yaml  deephit_survrnc.yaml  defaults.yaml  dsm.yaml  eventrank-within-cindex.yaml  eventrank.yaml  mensa.yaml  survival-moco.yaml  survival-within-cindex.yaml  survival.yaml  test_eventrank.yaml
conf/hydra/: default.yaml
conf/inputs/seer/: default.yaml
conf/outputs/: default.yaml
conf/paths/: default.yaml
conf/sweep/: deephit.yaml  survival-multi-event.yaml  survival.yaml
conf/tasks/: dsm-survival.yaml  event-classification.yaml  event-quantile-regression.yaml  event-regression.yaml  mensa-survival.yaml  mtl.yaml  survival-classification.yaml  survival-quantile-regression.yaml  survival.yaml
conf/tokenizers/: default.yaml  hsa_synthetic.yaml  meds.yaml  metabric.yaml  seer.yaml  synthetic.yaml  synthetic_omop.yaml
conf/transformers/: bert.yaml  finetuned.yaml  gpt2.yaml  numeric_bert.yaml  numeric_gpt2.yaml
data/: prepare_data-seed.json
data/hsa-synthetic/: simulated_data.csv
data/synthetic_omop/: _metadata.json  codes.parquet  patients_with_events.parquet  subjects_splits.parquet
docs/: deephit.md  development_guide.md  dsm.md  eda.md  femr_extension_examples.md  loss.md  loss_functions.md  loss_optimization.md  loss_weight_logging.md  meds_support.md  mensa.md  moco.md  models.md  numerical_stability.md  performance_comparison.md  synthetic_omop_generation.md
docs/booklet/: .latexmkrc  bibliography.bib  book-header-logo.tex  book-title-page.tex  book.aux  book.bbl  book.bcf  book.bcf-SAVE-ERROR  book.blg  book.fdb_latexmk  book.fls  book.out  book.run.xml  book.tex  book.toc  censoring-plot.tex  clinical-censoring-plot.tex  fixed-book-sections.tex  header-logo.tex  plot-examples.tex  time-to-event-plot.tex  title-background.tex
envs/: satcuda118py310.yml  satcuda118py39.yml  satpy310.yml  satpy39.yml
examples/: __init__.py  run_eda.py
logs/: backward_time_table.csv  forward_time_table.csv  list_mle_batch_benchmark.csv  list_mle_events_benchmark.csv  multievent_ranking_speedup.csv  ranking_benchmark_results.csv  ranking_benchmark_summary.md  ranking_loss_benchmark.csv  ranking_loss_comparison.md  ranknet_benchmark.csv  ranknet_comparison.md  sample_ranking_speedup.csv  survrnc_benchmark.csv  survrnc_comparison.md  survrnc_optimization_summary.md  survrnc_optimized_benchmark.csv  total_time_table.csv
logs/sat-finetune-survival-hsa_synthetic-job/: events.out.tfevents.1742893115.ddahlem-mac.55089.0  events.out.tfevents.1742893758.ddahlem-mac.86200.0  events.out.tfevents.1742893982.ddahlem-mac.4215.0
sat/: __init__.py  ci.py  cv.py  eda.py  eval.py  finetune.py  infer.py  lr_finder.py  moco_recommend.py  optuna_best_params.py  optuna_optimize.py  optuna_visualize.py  pipeline.py  prepare_data.py  preprocess_data.py  pretrain.py  train_labeltransform.py  train_tokenizer.py
sat/analysis/: __init__.py  censoring.py  covariates.py  distribution_fitting.py
sat/callbacks/: __init__.py  transformers.py
sat/data/: collator.py  load.py  splitter.py
sat/distributions/: README.md  __init__.py  base.py  lognormal.py  utils.py  weibull.py
sat/evaluate/: eval_modules.py
sat/loss/: __init__.py  balancing.py  base.py  meta.py  momentum_buffer.py
sat/models/: __init__.py  nets.py  parameter_nets.py  utils.py
sat/pycox/: utils.py
sat/sksurv/: exceptions.py  metrics.py  nonparametric.py  util.py
sat/transformers/: __init__.py  feature_extractor.py  trainer.py
sat/utils/: config.py  data.py  interpolate.py  km.py  logging.py  lr_finder.py  moco_buffer_estimator.py  output.py  rand.py  statistics.py  tokenizing.py  types.py
scripts/: setup_dev_env.sh
tests/data/: test_medical_labelers.py  test_meds_parser.py  test_splitter.py
tests/distributions/: __init__.py  test_distributions.py  test_expert_knowledge.py
tests/loss/: test_balancing.py  test_focal.py  test_momentum_buffer.py
tests/models/: README_benchmark.md  README_numerical_stability.md  analyze_hsa_dataset.py  benchmark_list_mle.py  benchmark_mensa.py  benchmark_moco.py  benchmark_multievent.py  benchmark_optimized_ranking.py  benchmark_performance.py  benchmark_ranknet.py  benchmark_soap.py  benchmark_survrnc.py  test_dsm.py  test_mensa.py  test_multievent_ranking.py  test_numerical_stability.py  test_optimized_multievent.py
tests/sat_trainer/: test_trainer.py
tests/transformers/: __init__.py  test_trainer.py
tests/utils/: test_output.py  test_rand.py  test_statistics.py  test_tokenizing.py
(+22060 files in other folders)
