[tool.poetry]
name = "sat"
version = "1.2.0"
description = "Survival Analysis using Transformers"
authors = [
    "Dominik Dahlem <mail@dominik-dahlem.com>",
]
maintainers = [
    "Dominik Dahlem <mail@dominik-dahlem.com>",
    "Mahed Abroshan <mahed.ab@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/sat/sat.git"
keywords = ["survival", "transformer"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
transformers = "4.50.0"
datasets = "3.4.1"
evaluate = "^0.4.3"
h5py = "^3.13.0"
pandas = "^2.2.3"
tables = {version = "^3.9.2", python = "<3.13"}
scikit-learn = "^1.6.1"
logdecorator = {version = "^2.5", python = ">=3.10"}
nvidia-ml-py3 = "^7.352.0"
tensorboard = "^2.19.0"
bootstrap-stat = "^0.2.4.2"
tokenizers = "^0.21.0"
numba = "0.61.0"
numpy = "<2.2"
einops = "0.8.1"
torchtuples = "^0.2.2"
mlflow = "^2.20.3"
accelerate = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
coverage = "^7.6.12"
black = "^25.1.0"
tensorboard = "^2.19.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
